--- a/firmware/brio_stepper_driver/brio_stepper_driver.ioc
+++ b/firmware/brio_stepper_driver/brio_stepper_driver.ioc
@@ -75,12 +75,18 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=stepper_reset
 PA0.Locked=true
 PA0.Signal=GPIO_Output
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=stepper_dir3
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=emg
 PA11.Locked=true
 PA11.Signal=GPIO_Input
 PA13.Locked=true
@@ -92,26 +98,44 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA15.Locked=true
 PA15.Mode=NSS_Signal_Hard_Input
 PA15.Signal=SPI1_NSS
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=stepper_step3
 PA2.Locked=true
 PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=sens_in3
 PA3.Locked=true
 PA3.Mode=IN4-Single-Ended
 PA3.Signal=ADC1_IN4
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=stepper_dir2
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=stepper_step2
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=sens_in2
 PA6.Locked=true
 PA6.Mode=IN3-Single-Ended
 PA6.Signal=ADC2_IN3
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=stepper_dir1
 PA7.Locked=true
 PA7.Signal=GPIO_Output
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=sleep
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=stepper_step1
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=sens_in1
 PB1.Locked=true
 PB1.Mode=IN12-Single-Ended
 PB1.Signal=ADC1_IN12
