--- a/firmware/brio_stepper_driver/brio_stepper_driver.ioc
+++ b/firmware/brio_stepper_driver/brio_stepper_driver.ioc
@@ -1,22 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,master,SubFamily
-ADC1.NbrOfConversionFlag=1
-ADC1.Offset-0\#ChannelRegularConversion=0
-ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SubFamily=STM32F303x8
-ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC2.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,SamplingTimeOPAMP-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag
-ADC2.NbrOfConversionFlag=1
-ADC2.Offset-0\#ChannelRegularConversion=0
-ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC2.SamplingTimeOPAMP-0\#ChannelRegularConversion=ADC_SAMPLETIME_4CYCLES_5
-ADC2.SubFamily=STM32F303x8
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -25,14 +7,12 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F303K8T6
 Mcu.Family=STM32F3
-Mcu.IP0=ADC1
-Mcu.IP1=ADC2
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=USART1
+Mcu.IPNb=5
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0 / OSC_IN
@@ -105,8 +85,7 @@ PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=sens_in3
 PA3.Locked=true
-PA3.Mode=IN4-Single-Ended
-PA3.Signal=ADC1_IN4
+PA3.Signal=GPIO_Input
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=stepper_dir2
 PA4.Locked=true
@@ -118,8 +97,7 @@ PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=sens_in2
 PA6.Locked=true
-PA6.Mode=IN3-Single-Ended
-PA6.Signal=ADC2_IN3
+PA6.Signal=GPIO_Input
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=stepper_dir1
 PA7.Locked=true
@@ -137,8 +115,7 @@ PB0.Signal=GPIO_Output
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=sens_in1
 PB1.Locked=true
-PB1.Mode=IN12-Single-Ended
-PB1.Signal=ADC1_IN12
+PB1.Signal=GPIO_Input
 PB3.Locked=true
 PB3.Mode=Full_Duplex_Slave
 PB3.Signal=SPI1_SCK
@@ -181,7 +158,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADC12outputFreq_Value=16000000
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
