--- a/firmware/brio_stepper_driver/brio_stepper_driver.ioc
+++ b/firmware/brio_stepper_driver/brio_stepper_driver.ioc
@@ -11,8 +11,11 @@ Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SPI1
 Mcu.IP3=SYS
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=TIM15
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F303K(6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0 / OSC_IN
@@ -56,17 +59,18 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=stepper_reset
+PA0.GPIO_Label=STEPPER_RESET
 PA0.Locked=true
 PA0.Signal=GPIO_Output
 PA1.GPIOParameters=GPIO_Label
-PA1.GPIO_Label=stepper_dir3
+PA1.GPIO_Label=STEPPER3_DIR
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=emg
+PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA11.GPIO_Label=STEPPER_EMG
+PA11.GPIO_PuPd=GPIO_PULLDOWN
 PA11.Locked=true
 PA11.Signal=GPIO_Input
 PA13.Locked=true
@@ -79,41 +83,40 @@ PA15.Locked=true
 PA15.Mode=NSS_Signal_Hard_Input
 PA15.Signal=SPI1_NSS
 PA2.GPIOParameters=GPIO_Label
-PA2.GPIO_Label=stepper_step3
-PA2.Locked=true
-PA2.Signal=GPIO_Output
+PA2.GPIO_Label=STEPPER3_STEP
+PA2.Signal=S_TIM15_CH1
 PA3.GPIOParameters=GPIO_Label
-PA3.GPIO_Label=sens_in3
+PA3.GPIO_Label=STEPPER3_SENS
 PA3.Locked=true
 PA3.Signal=GPIO_Input
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=stepper_dir2
+PA4.GPIO_Label=STEPPER2_DIR
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=stepper_step2
+PA5.GPIO_Label=STEPPER2_STEP
 PA5.Locked=true
-PA5.Signal=GPIO_Output
+PA5.Signal=S_TIM2_CH1_ETR
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=sens_in2
+PA6.GPIO_Label=STEPPER2_SENS
 PA6.Locked=true
 PA6.Signal=GPIO_Input
 PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=stepper_dir1
+PA7.GPIO_Label=STEPPER1_DIR
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=sleep
+PA8.GPIO_Label=STEPPER_SLEEP
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=GPIO_Label
-PB0.GPIO_Label=stepper_step1
+PB0.GPIO_Label=STEPPER1_STEP
 PB0.Locked=true
-PB0.Signal=GPIO_Output
+PB0.Signal=S_TIM3_CH3
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=sens_in1
+PB1.GPIO_Label=STEPPER1_SENS
 PB1.Locked=true
 PB1.Signal=GPIO_Input
 PB3.Locked=true
@@ -158,7 +161,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.ADC12outputFreq_Value=16000000
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
@@ -181,11 +184,23 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TIM2Freq_Value=8000000
 RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
+SH.S_TIM15_CH1.0=TIM15_CH1,Output Compare1 CH1
+SH.S_TIM15_CH1.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Output Compare1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,Output Compare3 CH3
+SH.S_TIM3_CH3.ConfNb=1
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,VirtualNSS
 SPI1.Mode=SPI_MODE_SLAVE
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_SLAVE
+TIM15.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
+TIM15.IPParameters=Channel-Output Compare1 CH1
+TIM2.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-Output Compare1 CH1
+TIM3.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Channel-Output Compare3 CH3
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
