--- a/firmware/brio_stepper_driver/brio_stepper_driver.ioc
+++ b/firmware/brio_stepper_driver/brio_stepper_driver.ioc
@@ -34,6 +34,9 @@ Mcu.Pin2=PA0
 Mcu.Pin20=PB4
 Mcu.Pin21=PB5
 Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM15_VS_ClockSourceINT
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
@@ -41,7 +44,7 @@ Mcu.Pin6=PA4
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=23
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303K8Tx
@@ -57,6 +60,9 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_BRK_TIM15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=STEPPER_RESET
@@ -161,7 +167,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM15_Init-TIM15-false-HAL-true
 RCC.ADC12outputFreq_Value=16000000
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
@@ -184,25 +190,35 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TIM2Freq_Value=8000000
 RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
-SH.S_TIM15_CH1.0=TIM15_CH1,Output Compare1 CH1
+SH.S_TIM15_CH1.0=TIM15_CH1,PWM Generation1 CH1
 SH.S_TIM15_CH1.ConfNb=1
-SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Output Compare1 CH1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM3_CH3.0=TIM3_CH3,Output Compare3 CH3
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,VirtualNSS
 SPI1.Mode=SPI_MODE_SLAVE
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_SLAVE
-TIM15.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM15.IPParameters=Channel-Output Compare1 CH1
-TIM2.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-Output Compare1 CH1
-TIM3.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
-TIM3.IPParameters=Channel-Output Compare3 CH3
+TIM15.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM15.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM15.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Period,AutoReloadPreload
+TIM2.Period=65535
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Channel-PWM Generation3 CH3,AutoReloadPreload
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM15_VS_ClockSourceINT.Mode=Internal
+VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
